Final rough draft

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </tr>
         <tr>
           <td>Email </td>
-          <td><a href="mailto:osully07@gmail.com"><b>davidpaul@email.com</b></a></td>
+          <td><a href="mailto:osully07@gmail.com"><b>thedavidpaul@email.com</b></a></td>
         </tr>
       </table>
     </div>
